--- a/BulletHell.vcxproj
+++ b/BulletHell.vcxproj
@@ -149,6 +149,21 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="BulletHell.cpp" />
+    <ClCompile Include="EndingScreen.cpp" />
+    <ClCompile Include="GameplayScreen.cpp" />
+    <ClCompile Include="GameStatus.cpp" />
+    <ClCompile Include="LogoScreen.cpp" />
+    <ClCompile Include="PauseScreen.cpp" />
+    <ClCompile Include="TitleScreen.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="EndingScreen.h" />
+    <ClInclude Include="GameplayScreen.h" />
+    <ClInclude Include="GameStatus.h" />
+    <ClInclude Include="PauseScreen.h" />
+    <ClInclude Include="TitleScreen.h" />
+    <ClInclude Include="LogoScreen.h" />
+    <ClInclude Include="Screen.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
