--- a/BulletHell.vcxproj
+++ b/BulletHell.vcxproj
@@ -148,7 +148,9 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="Animations.cpp" />
     <ClCompile Include="BulletHell.cpp" />
+    <ClCompile Include="CreditsScreen.cpp" />
     <ClCompile Include="EndingScreen.cpp" />
     <ClCompile Include="GameplayScreen.cpp" />
     <ClCompile Include="GameStatus.cpp" />
@@ -157,6 +159,8 @@
     <ClCompile Include="TitleScreen.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="Animations.h" />
+    <ClInclude Include="CreditsScreen.h" />
     <ClInclude Include="EndingScreen.h" />
     <ClInclude Include="GameplayScreen.h" />
     <ClInclude Include="GameStatus.h" />
