--- a/BulletHell.vcxproj.filters
+++ b/BulletHell.vcxproj.filters
@@ -38,6 +38,9 @@
     <ClCompile Include="CreditsScreen.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="InputSequence.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Screen.h">
@@ -65,6 +68,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="CreditsScreen.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="InputSequence.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
