Improves handling, asset loading and refactors some code

--- a/BulletHell.vcxproj.filters
+++ b/BulletHell.vcxproj.filters
@@ -41,6 +41,9 @@
     <ClCompile Include="InputSequence.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="AssetStore.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Screen.h">
@@ -71,6 +74,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="InputSequence.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="AssetStore.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
