--- a/BulletHell.vcxproj
+++ b/BulletHell.vcxproj
@@ -149,6 +149,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="Animations.cpp" />
+    <ClCompile Include="AssetStore.cpp" />
     <ClCompile Include="BulletHell.cpp" />
     <ClCompile Include="CreditsScreen.cpp" />
     <ClCompile Include="EndingScreen.cpp" />
@@ -161,6 +162,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Animations.h" />
+    <ClInclude Include="AssetStore.h" />
     <ClInclude Include="CreditsScreen.h" />
     <ClInclude Include="EndingScreen.h" />
     <ClInclude Include="GameplayScreen.h" />
