--- a/BulletHell.vcxproj
+++ b/BulletHell.vcxproj
@@ -155,6 +155,7 @@
     <ClCompile Include="EndingScreen.cpp" />
     <ClCompile Include="GameplayScreen.cpp" />
     <ClCompile Include="GameStatus.cpp" />
+    <ClCompile Include="InputHandler.cpp" />
     <ClCompile Include="LogoScreen.cpp" />
     <ClCompile Include="PauseScreen.cpp" />
     <ClCompile Include="InputSequence.cpp" />
@@ -167,6 +168,7 @@
     <ClInclude Include="EndingScreen.h" />
     <ClInclude Include="GameplayScreen.h" />
     <ClInclude Include="GameStatus.h" />
+    <ClInclude Include="InputHandler.h" />
     <ClInclude Include="InputSequence.h" />
     <ClInclude Include="PauseScreen.h" />
     <ClInclude Include="TitleScreen.h" />
